Fix alignment of group actions

--- a/app/styles/pages/_groups.scss
+++ b/app/styles/pages/_groups.scss
@@ -366,6 +366,9 @@
       position: absolute;
       top: 20px;
       right: 30px;
+      .stream-item-options {
+        margin-right: 0;
+      }
     }
   }
 }
